feat: v5 light rewrite
feat: native entrypoint via rust
feat: shared library for cli main
feat: jvm25 / gvm25 support
feat: wiring for native image layers
feat: ksp-based annotation processing
feat: wiring for embedding a jvm in elide's release (via jlink)
feat: experimental flags for js engine
feat: experimental native entrypoint
feat: embedded jlinked jvm bundle
feat: packaged jvm wiring, js config for labs features
test: path ops benchmark
test: add tests for bug in `node:path`
test: add benchmarks for `node:path`
fix: switch back to kotlin 1.9 lang/api
fix: aux cache/typescript
fix: bug with `oro` first-run
fix: defer library init until needed for zlib, sqlite
fix: bugs in `node:path` + cleanup
chore: drop usages of boringssl and apr
chore: drop custom zlib builds
chore: deprecate and drop tcnative
chore: deprecate and drop native transport
chore: upgrade to latest micronaut
chore: drop all kotlin js or multiplatform
chore: drop old build conventions
chore: drop old examples/samples
chore: drop old gradle plugin
chore: support gradle's configuration cache
chore: use self as package installer

Signed-off-by: Sam Gammon <sam@elide.dev>